--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,18 @@
 .App {
   text-align: center;
+  font-size: 50px;
+
 }
+
+p {
+
+  font-weight: 300;
+  color: #859900;
+  cursor: pointer;
+  font-family: 'Roboto', sans-serif;
+  font-size: 150x;
+}
+
 
 .App-logo {
   animation: App-logo-spin infinite 20s linear;
